--- a/packages/app/src/index.css
+++ b/packages/app/src/index.css
@@ -1,5 +1,17 @@
+@import "~antd/dist/antd.css";
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+}
+
+.Layout {
+  height: 100%;
+  width: 100%;
 }
